# kriya

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  architecture.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/actions/kriya-ci/: action.yml
.github/workflows/: ci.yml  kriya-ci-example.yml
apps/note-app/: README.md  index.html  package.json
apps/note-app/src/: App.tsx  actions.ts  agent.ts  main.tsx  seed.ts  store.ts  styles.css
apps/note-app/src-tauri/: Cargo.toml  agent-policy.yaml  tauri.conf.json
apps/note-app/src-tauri/capabilities/: default.json
apps/note-app/src-tauri/src/: deterministic.rs  lib.rs  main.rs  permissions.rs  protocol.rs
apps/note-app/src-tauri/src/agent/: host.rs  mod.rs
apps/note-app/src-tauri/src/agent/inference/: claude_cli.rs  deterministic.rs  mod.rs
apps/task-manager/: index.html  package.json  vite.config.ts
apps/task-manager/src/: App.tsx  actions.ts  agent.ts  main.tsx  seed.ts  store.ts  styles.css
apps/task-manager/src-tauri/: Cargo.toml  agent-policy.yaml  tauri.conf.json
apps/task-manager/src-tauri/capabilities/: default.json
apps/task-manager/src-tauri/src/: deterministic.rs  lib.rs  main.rs
bindings/dotnet/: .gitignore  Kriya.slnx  README.md
bindings/dotnet/Example/: Example.csproj  Program.cs
bindings/dotnet/Kriya/: Host.cs  JsonSchema.cs  Kriya.csproj  Protocol.cs  Registry.cs  Types.cs  Validation.cs
bindings/dotnet/Kriya.Tests/: HostFramingTests.cs  IntegrationTests.cs  JsonSchemaTests.cs  Kriya.Tests.csproj  RegistryTests.cs  ValidationTests.cs
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/com/kriyanative/kriya/: ActionContext.java  ActionDefinition.java  ActionResult.java  ActionValidationException.java  Handler.java  Host.java  Json.java  JsonSchema.java  P.java  ParamType.java  ParameterSchema.java  Protocol.java  RegisteredAction.java  Registry.java  Validation.java  ValidationIssue.java
bindings/java/src/test/java/com/kriyanative/kriya/: HostFramingTest.java  IntegrationTest.java  JsonSchemaTest.java  JsonTest.java  RegistryTest.java  ValidationTest.java
bindings/python/: .gitignore  LICENSE  README.md  pyproject.toml
bindings/python/examples/: govern_langgraph_stub.py  note_app_host.py
bindings/python/src/kriya/: __init__.py  host.py  jsonschema.py  protocol.py  registry.py  types.py  validate.py
bindings/python/src/kriya/agents/: __init__.py  claude_agent.py  crewai.py  langgraph.py  openai_agents.py
bindings/python/tests/: test_agents.py  test_claude_agent.py  test_crewai.py  test_host_unit.py  test_integration.py  test_jsonschema.py  test_openai_agents.py  test_registry.py  test_run_task.py  test_validate.py  test_wrap.py
crates/agent-native-host/: Cargo.toml  README.md  rust-toolchain.toml
crates/agent-native-host/src/: lib.rs  memory.rs  protocol.rs  sidecar.rs
crates/agent-native-host/src/agent/: host.rs  mod.rs  transport.rs
crates/agent-native-host/src/agent/inference/: mod.rs  ollama.rs  scripted.rs
crates/agent-native-host/src/mcp/: approval.rs  executor.rs  governor.rs  jsonrpc.rs  mod.rs  server.rs
crates/kriya/: Cargo.toml  README.md
crates/kriya/src/: audit.rs  budget.rs  corr.rs  lib.rs  memory.rs  permissions.rs  protocol.rs  registry.rs  secrets.rs  sidecar.rs
crates/kriya/src/agent/: host.rs  mod.rs  transport.rs
crates/kriya/src/agent/inference/: anthropic.rs  claude_cli.rs  mod.rs  ollama.rs  retry.rs  scripted.rs
crates/kriya/src/mcp/: approval.rs  client.rs  computer_use.rs  contain.rs  executor.rs  governor.rs  jsonrpc.rs  mod.rs  proxy_executor.rs  proxy_server.rs  router.rs  server.rs
crates/kriya/src/mcp/computeruse/: executor.rs  macos.rs  mod.rs
crates/kriya/src/mcp/reachin/: executor.rs  macos.rs  mod.rs  synth.rs
crates/kriya/tests/: broker.rs  broker_http.rs  brokering.rs  contain.rs  egress_fixture.rs  egress_ledger.rs  kriya_ci_smoke.rs  kriya_hermes_hook_smoke.rs  kriya_hook_smoke.rs
crates/kriya/tests/fixtures/hook-contract/: README.md  posttooluse-main.json  posttooluse-subagent.json  pretooluse-subagent.json
docs/: CONTINUE.md  EXPLAINER.md  FEATURES.md  GOVERNED-CI-LANE.md  LAUNCH.md  LICENSING.md  PRODUCT_GAPS.md  ROADMAP.md  SECURITY.md  SERVICE-ARCHITECTURE.md  SOLUTIONS-macos.md  THREE-FRONTIERS.md  USE_CASES.md
examples/actor-identity/: .gitignore  README.md  agent-policy.yaml  demo.sh  handler.mjs  tools.json
examples/actual-budget-bolt-on/: .mcp.json.example  DEMO.md  README.md  REAL-DEMO.md  agent-policy.yaml  demo.py  demo.sh  package-lock.json  package.json  tools.json  tsconfig.json
examples/actual-budget-bolt-on/src/: actions.ts  actual-api.ts  fake-actual.ts  handler.ts
examples/actual-budget-bolt-on/types/: actual-app-api.d.ts
examples/gateway-proxy-demo/: .mcp.json  README.md  agent-policy.yaml  broker.yaml  mock-mcp-server.js  run.sh
examples/govern-langgraph-stub/: agent-policy.yaml  package.json  run.mjs
examples/kriya-ci-demo/: README.md  agent.mjs  policy.yaml
examples/mymoney-dotnet-bolt-on/: KriyaBoltOn.cs  README.md  agent-policy.yaml
examples/node-sidecar-host/: README.md  demo-script.json  package.json  run.mjs
examples/on-device-guarantee/: .gitignore  README.md  demo.sh  drive.mjs  script.json  sealed-policy.yaml
examples/reach-in-demo/: README.md  numbers-demo-policy.yaml  numbers-demo.sh  probe-policy.yaml  probe.sh
examples/replicad-bolt-on/: .mcp.json.example  README.md  agent-policy.yaml  demo.py  demo.sh  package-lock.json  package.json  tools.json  tsconfig.json
examples/replicad-bolt-on/src/: actions.ts  cad.ts  handler.ts  kernel.ts
examples/replicad-studio/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/replicad-studio/src/: App.tsx  Viewport.tsx  cadModel.ts  governance.ts  main.tsx  replicadKernel.ts  styles.css
scripts/macos/: Info.plist  README.md  build-gateway-app.sh
tools/: verify-hook-firing.sh
tools/verify-receipts/: Cargo.toml
tools/verify-receipts/src/: main.rs
(+1 files in other folders)
