[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kriya"
dynamic = ["version"]
description = "The governed in-process action layer for Python apps — agents drive your app through typed, permissioned, audited actions, not pixels."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sandeep Shekhar" }]
keywords = ["agent", "ai-agent", "kriya", "mcp", "desktop", "llm", "automation", "governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
# Zero runtime dependencies — stdlib only. The Rust kriya-host binary is the only external piece,
# and it's spawned over stdio, not imported.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/sandeepshekhar26/kriya"
Repository = "https://github.com/sandeepshekhar26/kriya"
Issues = "https://github.com/sandeepshekhar26/kriya/issues"

[tool.hatch.version]
path = "src/kriya/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/kriya"]

[tool.hatch.build.targets.sdist]
include = ["src/kriya", "tests", "examples", "README.md", "LICENSE"]

# Tests are pure stdlib `unittest` (run with `python -m unittest discover -s tests`) but also work
# under pytest. pythonpath lets either runner import the package straight from src without install.
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
