[package]
name = "kriya"
version = "0.1.2"
description = "MCP for Desktop — Rust agent host for kriya desktop apps — protocol, signed audit, budget, persistent memory, permission policy, swappable inference backends. Pairs with kriya-core."
license = "MIT"
edition = "2021"
rust-version = "1.77"
repository = "https://github.com/sandeepshekhar26/kriya"
homepage = "https://github.com/sandeepshekhar26/kriya"
keywords = ["agent", "tauri", "llm", "ai-agent", "desktop"]
categories = ["api-bindings", "gui"]

[lib]
name = "kriya"
crate-type = ["rlib"]

[features]
# Full host by default — existing Tauri apps and the cloud LLM backends keep working unchanged.
default = ["tauri-host", "http-inference"]
# In-process Tauri integration (`TauriSink`). Turn OFF for a non-Tauri embedder — e.g. an app
# that only hosts the governed MCP server — to drop the `tauri` dependency entirely.
tauri-host = ["dep:tauri"]
# Remote/cloud LLM inference backends (Anthropic, Ollama) over HTTP. Turn OFF to drop the
# `ureq` HTTP/TLS client; the deterministic, scripted, and claude-cli backends remain.
http-inference = ["dep:ureq"]

[dependencies]
tauri = { version = "2", features = [], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ed25519-dalek = "2"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2", features = ["json", "tls"], optional = true }
rusqlite = { version = "0.31", features = ["bundled"] }
