[package]
name = "kriya"
version = "0.1.3"
description = "MCP for Desktop — Rust agent host for kriya desktop apps — protocol, signed audit, budget, persistent memory, permission policy, swappable inference backends. Pairs with kriya-core."
license = "MIT"
edition = "2021"
rust-version = "1.77"
repository = "https://github.com/sandeepshekhar26/kriya"
homepage = "https://github.com/sandeepshekhar26/kriya"
keywords = ["agent", "tauri", "llm", "ai-agent", "desktop"]
categories = ["api-bindings", "gui"]

[lib]
name = "kriya"
crate-type = ["rlib"]

# The product binary (Front 1 stdio governance proxy). Declared explicitly with
# `required-features` so it is built ONLY when `mcp-client` is on — the default build never
# tries to compile it (it references feature-gated modules). `kriya-mcp`/`kriya-host` stay
# auto-discovered from src/bin and unaffected.
[[bin]]
name = "kriya-gateway"
path = "src/bin/kriya-gateway.rs"
required-features = ["mcp-client"]

[features]
# Full host by default — existing Tauri apps and the cloud LLM backends keep working unchanged.
default = ["tauri-host", "http-inference"]
# In-process Tauri integration (`TauriSink`). Turn OFF for a non-Tauri embedder — e.g. an app
# that only hosts the governed MCP server — to drop the `tauri` dependency entirely.
tauri-host = ["dep:tauri"]
# Remote/cloud LLM inference backends (Anthropic, Ollama) over HTTP. Turn OFF to drop the
# `ureq` HTTP/TLS client; the deterministic, scripted, and claude-cli backends remain.
http-inference = ["dep:ureq"]
# MCP *client* + the stdio governance proxy (Front 1) and the `kriya-gateway` product binary.
# Off by default so the library stays lean for in-process embedders that never proxy. Adds NO
# new dependencies — the client is std-only (`std::process`, `std::io`) over the existing
# serde/serde_json. Enables `mcp::client`, `mcp::proxy_executor`, `mcp::proxy_server`.
mcp-client = []
# Front 2 — the reach-in adapter (`mcp::reachin`): synthesize a governed MCP server from a running
# app's OS accessibility tree, for apps with no MCP server and no API. Off by default so the
# default build stays unchanged and pulls in NO macOS FFI deps. The accessibility-sys +
# core-foundation crates are macOS-only (target-gated below), so on other platforms this feature
# compiles only the platform-agnostic core (the AxBackend trait, tool synthesis, AxExecutor,
# ReachInServer over an injected backend) — the real AX backend is `#[cfg(target_os = "macos")]`.
reach-in = ["dep:accessibility-sys", "dep:core-foundation"]
# Front 3 — the computer-use fallback (`mcp::computer_use`): drives a CLEARED tools/call as pixel
# input via an external "computer-use driver" command, for apps Fronts 1 & 2 can't reach. Deferred /
# design-partner-gated. Off by default; adds NO dependencies (the heavy CV pipeline lives in the
# external driver, not in the governed core — this is just the thin ActionExecutor seam).
computer-use = []

[dependencies]
tauri = { version = "2", features = [], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ed25519-dalek = "2"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2", features = ["json", "tls"], optional = true }
rusqlite = { version = "0.31", features = ["bundled"] }

# Front 2 (reach-in) macOS-only FFI deps. Target-gated so non-macOS builds of the `reach-in`
# feature never try to resolve them — `dep:` in the feature still works because Cargo treats an
# optional dep under any target as feature-activatable; on a non-macOS host the dep is simply
# absent and the `#[cfg(target_os = "macos")]` backend code is compiled out.
[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = { version = "0.2", optional = true }
core-foundation = { version = "0.10", optional = true }
