[package]
name = "kriya"
version = "0.1.4"
description = "MCP for Desktop — Rust agent host for kriya desktop apps — protocol, signed audit, budget, persistent memory, permission policy, swappable inference backends. Pairs with kriya-core."
license = "MIT"
edition = "2021"
rust-version = "1.77"
repository = "https://github.com/sandeepshekhar26/kriya"
homepage = "https://github.com/sandeepshekhar26/kriya"
keywords = ["agent", "tauri", "llm", "ai-agent", "desktop"]
categories = ["api-bindings", "gui"]

[lib]
name = "kriya"
crate-type = ["rlib"]

# The product binary (Front 1 stdio governance proxy). Declared explicitly with
# `required-features` so it is built ONLY when `mcp-client` is on — the default build never
# tries to compile it (it references feature-gated modules). `kriya-mcp`/`kriya-host` stay
# auto-discovered from src/bin and unaffected.
[[bin]]
name = "kriya-gateway"
path = "src/bin/kriya-gateway.rs"
required-features = ["mcp-client"]

[features]
# Full host by default — existing Tauri apps and the cloud LLM backends keep working unchanged.
default = ["tauri-host", "http-inference"]
# In-process Tauri integration (`TauriSink`). Turn OFF for a non-Tauri embedder — e.g. an app
# that only hosts the governed MCP server — to drop the `tauri` dependency entirely.
tauri-host = ["dep:tauri"]
# Remote/cloud LLM inference backends (Anthropic, Ollama) over HTTP. Turn OFF to drop the
# `ureq` HTTP/TLS client; the deterministic, scripted, and claude-cli backends remain.
http-inference = ["dep:ureq"]
# MCP *client* + the stdio governance proxy (Front 1) and the `kriya-gateway` product binary.
# Off by default so the library stays lean for in-process embedders that never proxy. Adds NO
# new dependencies — the client is std-only (`std::process`, `std::io`) over the existing
# serde/serde_json. Enables `mcp::client`, `mcp::proxy_executor`, `mcp::proxy_server`.
mcp-client = []
# Remote MCP upstreams for the broker (W2-2): a Streamable-HTTP + SSE transport so `kriya-gateway
# broker` can govern REMOTE MCP servers (a `url:` upstream), not just spawned stdio ones — the path
# that reaches Claude Desktop / Cursor / Copilot's hosted servers. Reuses the same synchronous
# `ureq` HTTP/TLS client the inference backends use (no tokio, no async), so it adds no new dep when
# `http-inference` is already on. Implies `mcp-client` (it extends the same McpClient).
mcp-http = ["mcp-client", "dep:ureq"]
# Front 2 — the reach-in adapter (`mcp::reachin`): synthesize a governed MCP server from a running
# app's OS accessibility tree, for apps with no MCP server and no API. Off by default so the
# default build stays unchanged and pulls in NO macOS FFI deps. The accessibility-sys +
# core-foundation crates are macOS-only (target-gated below), so on other platforms this feature
# compiles only the platform-agnostic core (the AxBackend trait, tool synthesis, AxExecutor,
# ReachInServer over an injected backend) — the real AX backend is `#[cfg(target_os = "macos")]`.
reach-in = ["dep:accessibility-sys", "dep:core-foundation", "dep:core-graphics"]
# Front 3 — governed computer-use (`mcp::computeruse`, D-017): a fixed, system-wide tool set
# (screenshot/click/move/scroll/type/key/list_apps) that drives any app via pixels, every action
# routed through the unchanged Governor. Off by default. The macOS backend uses CGEvent (mouse/key/
# scroll) + `screencapture`; `base64` encodes the PNG for the screenshot tool's image result.
computer-use = ["dep:core-graphics", "dep:core-foundation", "dep:accessibility-sys", "dep:base64"]
# Router v2 — ONE MCP endpoint multiplexing multiple governed fronts under ONE Governor (one policy,
# one signer/audit, one actor): the computer-use floor (any app) PLUS specific apps' named reach-in
# controls, each `tools/call` routed to the right front by a `<ns>__<tool>` namespace. Composes the
# existing fronts (it does NOT reimplement them), so it simply turns both on; adds NO new deps.
router = ["reach-in", "computer-use"]

[dependencies]
tauri = { version = "2", features = [], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ed25519-dalek = "2"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2", features = ["json", "tls"], optional = true }
rusqlite = { version = "0.31", features = ["bundled"] }
# Front 3 (computer-use) only — base64-encode the screenshot PNG into the tool's image result.
# Cross-platform + optional, pulled solely by the `computer-use` feature; default build never sees it.
base64 = { version = "0.22", optional = true }

# Unix-only: advisory flock on the audit log so CONCURRENT writers of one chain (e.g. parallel
# kriya-hook invocations, each a fresh process) serialize their [re-seed tail -> append] and the
# hash chain never forks (W1-6). Already in the dependency tree transitively; explicit and tiny.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Front 2 (reach-in) macOS-only FFI deps. Target-gated so non-macOS builds of the `reach-in`
# feature never try to resolve them — `dep:` in the feature still works because Cargo treats an
# optional dep under any target as feature-activatable; on a non-macOS host the dep is simply
# absent and the `#[cfg(target_os = "macos")]` backend code is compiled out.
[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = { version = "0.2", optional = true }
core-foundation = { version = "0.10", optional = true }
# CoreGraphics CGEvent — used by the reach-in backend's typed-input path (type_text / send_key):
# synthesize keyboard events (unicode string or virtual keycode) and post them to the focused app.
# Same target-gating + `optional` posture as the AX deps, so the default build never pulls it; its
# default `link` feature links the CoreGraphics framework (and unifies core-foundation's `link`).
core-graphics = { version = "0.25", optional = true }
