[package]
name = "note-app"
version = "0.0.1"
description = "agent-native reference note app"
edition = "2021"
rust-version = "1.77"

[lib]
name = "note_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ed25519-dalek = "2"
rand = "0.8"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
