[package]
name = "note-app"
version = "0.0.1"
description = "kriya reference note app"
edition = "2021"
rust-version = "1.77"

[lib]
name = "note_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde_json = "1"
kriya = { path = "../../../crates/kriya" }
